--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,9 @@
             android:layout_marginTop="280dp"
             android:background="@drawable/lineabotonresponder"
             android:ems="10"
+            android:hint="Respuesta"
             android:inputType="textPersonName"
             android:padding="10dp"
-            android:text="Respuesta"
             android:textColor="#595858"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
